<?xml version="1.0"?>
<package format="3">
  <name>a1m8_cartographer</name>
  <version>0.0.1</version>
  <description>RPLIDAR A1M8 + Cartographer 2D SLAM (Lua auto-gen)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <!-- ament_python 패키지임을 선언 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <!-- launch에서 get_package_share_directory 쓰므로 필요 -->
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
